# unarmed

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  lorom128.cfg  lorom256.cfg
assets/: CMakeLists.txt
assets/backgrounds/: tile-schema.json  town-map.tmj  town-map.tsj
assets/fonts/: Outer.aseprite
assets/sound/: Untitled.terrificaudio  sounds_n_stuff.terrificaudio
assets/sound/fx/brr/: gun-shot.brr
assets/sound/instruments/brr/: Acoustic Piano High.brr  Acoustic Piano Low.brr  Classic Supersaw.brr  Cronchy Bass.brr  Slap Bass(Pop).brr  Squarey Pluck.brr  Synth Fingered Bass.brr  Synth Guitar Mute.brr  Synth Guitar.brr  Synth String Section(High).brr  Synth String Section(Low).brr  Synth Strings 5ths.brr  Tenor Sax(high).brr
assets/sound/instruments/brr/drums/: Hi-Hat Closed.brr  Kick.brr  Ride Cymbal.brr  Snare Drum A(Hard).brr  Snare Drum A(Soft).brr  Snare Drum B Rimshot(Hard).brr  Snare Drum B Rimshot(Soft).brr  Snare Drum B(Hard).brr  Snare Drum B(Soft).brr
assets/sound/songs/: level.mml  menu.mml  test.mml
assets/sprites/: demo-sprites.aseprite  explosion.aseprite  player-anim.aseprite
cmake/: CMakeCA65816Information.cmake
docs/: artist_notes.md  notes.md  specs.md  todo.org
src/: CMakeLists.txt  assets.inc  audio.asm  bullet.inc  coll_bg.inc  coll_sprite.inc  data.inc  defines.inc  demo.asm  header.inc  hud.inc  init.asm  init.inc  init_game.inc  input.inc  io.inc  lib.inc  macros.inc  main.asm  main_loop.inc  menu.inc  meta-data.inc  player.inc  sound.inc  variables.inc  vectors.inc
(+63 files in other folders)
